# youtube-rag-project

./: .env.example  .gitignore  Dockerfile  LLM_WIKI.md  README.md  delete_channel.py  main.py  pyproject.toml  requirements.txt  start.sh
app/: config.py
app/api/: main.py  models.py
app/api/routes/: channels.py  health.py  search.py
app/core/: chunker.py  embedder.py  llm.py  rag.py  retriever.py
app/db/: sqlite.py  vectordb.py
app/ingestion/: pipeline.py  scheduler.py  transcripts.py  youtube_api.py
eval/: questions.json  run_eval.py
tests/: test_api.py  test_chunker.py  test_embedder.py  test_ingestion.py  test_rag.py  test_retriever.py  test_vectordb.py
