[project]
name = "youtube-rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "google-api-python-client>=2.195.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "litellm>=1.83.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
